# Parcial_1_Sistemas_Operativos_AFRG

./: CMakeLists.txt  FileManager.cpp  FileManager.h  Process.cpp  Process.h  Queue.cpp  Queue.h  README.md  Scheduler.cpp  Scheduler.h  input.txt  main.cpp
